--- a/src/index.html
+++ b/src/index.html
@@ -437,7 +437,7 @@
                 </a>
                 <div class="footer__nav--together">
                   <a
-                    href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                    href="https://www.facebook.com/namu.museum/?locale=uk_UA target=_blank"
                     class="footer__facebook">
                     <img
                       src="images/Facebook.svg"
@@ -446,7 +446,7 @@
                     >
                   </a>
                   <a
-                    href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D"
+                    href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D target=_blank"
                     class="footer__instagram">
                     <img
                       src="images/instagram.svg"
@@ -624,7 +624,7 @@
             Designed by Zhyriada Marina
           </p>
           <p class="footer__workers">
-            Copyright © 2019. All Rights Reserved.
+            Copyright © 2023. All Rights Reserved.
           </p>
         </div>
       </div>
