--- a/src/index.html
+++ b/src/index.html
@@ -437,8 +437,9 @@
                 </a>
                 <div class="footer__nav--together">
                   <a
-                    href="https://www.facebook.com/namu.museum/?locale=uk_UA target=_blank"
-                    class="footer__facebook">
+                    href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                    class="footer__facebook"
+                    target="_blank">
                     <img
                       src="images/Facebook.svg"
                       alt="Facebook"
@@ -446,8 +447,9 @@
                     >
                   </a>
                   <a
-                    href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D target=_blank"
-                    class="footer__instagram">
+                    href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D"
+                    class="footer__instagram"
+                    target="_blank">
                     <img
                       src="images/instagram.svg"
                       alt="instagram"
