--- a/src/index.html
+++ b/src/index.html
@@ -537,6 +537,7 @@
                 <a
                   href="https://goo.gl/maps/CAeSadQDCenzKFWM8"
                   class="footer__addres"
+                  target="_blank"
                 >
                   вул. M. Грушевського, 6; Київ, 01001 <br>
                 </a>
