--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
     <link rel="icon"
-      href="./images/signs/favicon/favicon-32x32.png"
+      href="./images/signs/favicon/Muzej.ico"
       type="image/National Museum"
     >
     <link rel="stylesheet" href="./styles/main.scss">
@@ -20,7 +20,7 @@
   <body class="page__body">
     <header class="header" id="home">
       <div class="header__top-nav">
-        <div class="header__top-nav__museum">
+        <div class="header__top-nav__museum grid__item--desktop-6-12 grid__item--tablet-4-6">
         </div>
         <div class="header__top-nav__container grid grid--desktop grid--tablet">
           <a
@@ -39,9 +39,10 @@
             <img
               src="./images/signs/NAMU.svg"
               alt="logo"
-              class="header__top-nav__NAMU">
+              class="header__top-nav__logo__NAMU">
           </a>
         </div>
+
         <div class="header__top-nav__name header__top-nav__name--h grid grid--desktop grid--tablet">
           <h1 class="header__top-nav__name__item">ХУДОЖНІЙ </h1>
         </div>
@@ -56,6 +57,7 @@
             <p class="header__top-nav__tickets__right"></p>
           </a>
         </div>
+
         <a
           href="#events"
           title="events"
@@ -73,7 +75,7 @@
           <div class="menu__center">
             <div class="menu__list">
               <ul class="menu__list__block">
-                <div class="menu__list__left">
+                <div class="menu__list__left-right">
                   <li class="menu__item">
                     <a href="#gallery" class="menu__link">Галерея</a>
                   </li>
@@ -82,7 +84,7 @@
                   </li>
                 </div>
 
-                <div class="menu__list__right">
+                <div class="menu__list__left-right">
                   <li class="menu__item">
                     <a href="#about-us" class="menu__link">Про Нас</a>
                   </li>
@@ -92,11 +94,9 @@
                 </div>
               </ul>
 
-
-
               <div class="menu__block">
-                <div class="menu__stick">
-                  <div class="menu__stick__item">
+                <div class="menu__block__stick">
+                  <div class="menu__block__stick__item">
                   </div>
                 </div>
                 <div class="menu__block__container">
@@ -121,5 +121,226 @@
       </nav>
     </header>
 
+    <main class="main">
+      <div class="main__container">
+        <h1 class="main__head" id="events">
+          Актуальні події
+        </h1>
+
+        <section class="main__section grid grid--desktop">
+          <div class="main__section__item grid__item--desktop-1-7">
+            <img src="./images/photos/actual-acts/jdy.svg"
+            alt="idy"
+            class="main__section__item__photo">
+          </div>
+          <div class="main__description grid__item--desktop-9-12">
+            <div class="main__description__act">
+              <p class="main__description__act__exhibition">
+                ВИСТАВКА
+              </p>
+              <p class="main__description__act__date">
+                26.08-29.11.2019
+              </p>
+            </div>
+            <h2 class="main__description__name
+            main__description__name--square
+            grid__item--desktop-9-12">
+              Йду і повертаюсь
+            </h2>
+            <p class="main__description__topic grid__item--desktop-9-12">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+        </section>
+
+        <section class="main__section grid grid--desktop">
+          <div class="main__section__item grid__item--desktop-1-7">
+            <img src="./images/photos/actual-acts/Spogady.svg"
+              alt="spogady"
+              class="main__section__item__photo">
+          </div>
+          <div class="main__description grid__item--desktop-9-12">
+            <div class="main__description__act">
+              <p class="main__description__act__exhibition">
+                ВИСТАВКА
+              </p>
+              <p class="main__description__act__date">
+                26.08-29.11.2019
+              </p>
+            </div>
+            <h2 class="main__description__name
+            main__description__name--squareTwo
+            grid__item--desktop-9-12">
+              І спогади і мрії
+            </h2>
+            <p class="main__description__topic grid__item--desktop-9-12">
+              Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </section>
+
+        <section class="main__section main__section--lection">
+          <div class="main__section__item">
+            <img src="./images/photos/actual-acts/klasytsyzm.svg"
+              alt="klasytsyzm"
+              class="main__section__item__photo">
+          </div>
+          <div class="main__description main__description--lection">
+            <div class="main__description__act main__description__act--add">
+              <p class="main__description__act__exhibition">
+                ЛЕКЦІЯ
+              </p>
+              <p class="main__description__act__date">
+                26/08/2019 - 11:00
+              </p>
+            </div>
+            <div class="main__description__item">
+              <h2 class="main__description__name main__description__name--klasytsyzm">
+                Від класицизму до
+              </h2>
+              <h2 class="main__description__name main__description__name--klasytsyzm">
+                романтизму
+              </h2>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <div class="gallery" id="gallery">
+        <h1 class="gallery__name">
+          Галерея
+        </h1>
+        <div class="gallery__image">
+          <img src="./images/photos/gallery/1.svg"
+            alt="gallery1"
+            class="gallery__image__item">
+        </div>
+      </div>
+      </div>
+
+      <div class="subscription" id="about-us">
+        <div class="subscription__container">
+          <h2 class="subscription__head">
+            Підписка
+          </h2>
+          <p class="subscription__paragraph">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form action="post" class="subscription__form">
+            <input
+              required
+              name="email"
+              type="Email"
+              placeholder="Email"
+              class="subscription__form__field"
+            >
+            <a
+              href="#"
+              title="subscription"
+              class="subscription__link">
+              <p class="subscription__form__email"></p>
+            </a>
+          </form>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="footer__box grid grid--tablet grid--desktop">
+        <div class="footer__socials grid__item--tablet-1-1 grid__item--desktop-1-1">
+          <a
+            href="#"
+            class="footer__logo"
+            title="logo">
+            <img
+              src="./images/signs/NAMU.svg"
+              alt="logo"
+              class="footer__logo__NAMU">
+          </a>
+          <div class="footer__socials__double">
+            <a
+              href="https://www.facebook.com/"
+              class="footer__socials__facebook"
+              title="logo"
+              target="_blank">
+              <img
+                src="./images/signs/Facebook.svg"
+                alt="logo">
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              title="logo"
+              target="_blank">
+              <img
+                src="./images/signs/Instagram.svg"
+                alt="logo">
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__second grid__item--tablet-2-6 grid__item--desktop-3-7">
+          <div class="footer__second__block">
+            <div class="footer__second__container">
+              <div class="footer__second__schedule">Графік роботи</div>
+              <div class="footer__second__time">
+                <div class="footer__second__time__items">12:00 — 20:00 середа<br>
+                  12:00 — 20:00 четвер<br>
+                  12:00 — 20:00 п’ятниця<br>
+                  11:00 — 19:00 субота<br>
+                  11:00 — 19:00 неділя
+                </div>
+              </div>
+            </div>
+            <div class="footer__second__days">Вихідні: понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
+          </div>
+          <div class="footer__second__contact">
+            <div class="footer__second__name">Контакти:</div>
+            <div class="footer__second__adress">
+              <div class="footer__second__adress__item">вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__round">
+          <a
+            href="#"
+            title="logo"
+            class="footer__round__arrow">
+            <img
+              src="./images/signs/arrow.svg"
+              alt="logo"
+              class="footer__round__arrow__item">
+          </a>
+        </div>
+
+        <div class="footer__stick grid__item--tablet-2-6 grid__item--desktop-8-8">
+          <div class="footer__stick__item">
+          </div>
+        </div>
+
+        <div class="footer__list grid__item--tablet-3-5 grid__item--desktop-9-11">
+          <div class="footer__list__left">
+            <li class="footer__item">
+              <a href="#gallery" class="footer__link">Галерея</a>
+            </li>
+            <li class="footer__item">
+              <a href="#events" class="footer__link">Виставки та події</a>
+            </li>
+          </div>
+          <div class="footer__list__right">
+            <li class="footer__item">
+              <a href="#about-us" class="footer__link">Про Нас</a>
+            </li>
+            <li class="footer__item">
+              <a href="#contacts" class="footer__link">Контакти</a>
+            </li>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
