--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,319 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" href="./images/logo.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header id="#about" class="header">
+      <div class="container">
+        <div class="header__top">
+          <div class="header__menu-opener"></div>
+
+          <div class="grid grid--tablet">
+            <div class="header__logo-wrapper">
+              <a href="#" class="title title--header-logo title--aling--center">
+                Na<br>Mu
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="grid grid--tablet">
+          <h1 class="header__title title title--header">Художній Музей</h1>
+
+          <a href="#events" class="header__tickets">Квитки</a>
+
+          <a href="#events" class="header__events">ПодіЇ</a>
+        </div>
+      </div>
+
+      <div class="header__image"></div>
+    </header>
+
+    <main>
+      <section id="events" class="events">
+        <div class="container">
+          <h2 class="events__title title">Актуальні події</h2>
+
+          <div class="events__item">
+            <div class="grid grid--tablet">
+              <img
+                src="./images/events/event-1.jpg"
+                alt="Йду і повертаюсь"
+                class="events__item-image"
+              >
+
+              <div class="events__item-info">
+                <div class="events__item-date-wrapper">
+                  <span class="event-type">Виставка</span>
+
+                  <span class="event-date">26.08-29.11.2019</span>
+                </div>
+
+                <h3 class="events__item-title title title--event title--align--left">
+                  Йду і повертаюсь
+                </h3>
+
+                <p class="events__item-description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="events__item">
+            <div class="grid grid--tablet">
+              <img
+                src="./images/events/event-2.jpg"
+                alt="І спогади і мрії"
+                class="events__item-image"
+              >
+
+              <div class="events__item-info">
+                <div class="events__item-date-wrapper">
+                  <span class="event-type">Виставка</span>
+
+                  <span class="event-date">26.08-29.11.2019</span>
+                </div>
+
+                <h3 class="events__item-title title title--event title--align--left">
+                  І спогади і мрії
+                </h3>
+
+                <p class="events__item-description">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="event">
+        <img
+          src="./images/events/event-bg.jpg"
+          alt="Від класицизму до романтизму"
+          class="event__outer-image"
+        >
+
+        <div class="container">
+          <div class="event__content">
+            <img
+              src="./images/events/event-bg.jpg"
+              alt="Від класицизму до романтизму"
+              class="event__inner-image"
+            >
+
+            <div class="event__info">
+              <div class="event__date-wrapper">
+                <span class="event-type">Лекція</span>
+
+                <span class="event-date">26/08/2019 - 11:00</span>
+              </div>
+
+              <h3 class="event__title title title--event">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="gallery" class="gallery">
+        <div class="container">
+          <h2 class="gallery__title title">Галерея</h2>
+
+          <div class="slider">
+            <div class="slider__slides">
+              <img
+                src="./images/slides/image-1.jpg"
+                alt="Slide's image 1"
+                class="slider__image"
+              >
+            </div>
+          </div>
+
+          <div class="gallery__images">
+            <div class="grid grid--desktop grid--gallery">
+              <img
+                src="./images/gallery/image-1.jpg"
+                alt="Gallery's image 1"
+                class="gallery__image"
+              >
+
+              <img
+                src="./images/gallery/image-2.jpg"
+                alt="Gallery's image 2"
+                class="gallery__image"
+              >
+
+              <img
+                src="./images/gallery/image-3.jpg"
+                alt="Gallery's image 3"
+                class="gallery__image"
+              >
+
+              <img
+                src="./images/gallery/image-4.jpg"
+                alt="Gallery's image 4"
+                class="gallery__image"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <div class="container">
+          <h2 class="subscribe__title title title--align--center title--white">
+            Підписка
+          </h2>
+
+          <p class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <div class="grid grid--tablet">
+            <form action="#" class="subscribe__form">
+              <!-- linthtml-disable -->
+
+              <input
+                type="email"
+                class="subscribe__field"
+                placeholder="E-mail"
+                required
+              >
+
+              <button type="submit" class="subscribe__submit"></button>
+
+              <!-- linthtml-enable -->
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer id="contacts" class="footer">
+      <div class="container">
+        <div class="grid footer__grid-bottom">
+          <div class="footer__top">
+            <a href="#" class="footer__logo title title--footer-logo title--align--left">
+              Na<br>Mu
+            </a>
+
+            <div class="footer__socials">
+              <a
+                href="https://www.facebook.com/"
+                class="footer__social-link"
+                target="_blank"
+              ></a>
+
+              <a
+                href="https://www.instagram.com/"
+                class="footer__social-link"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+
+          <div class="footer__info">
+            <p>Графік роботи</p>
+
+            <ul class="footer__list">
+              <li>
+                <span class="footer__bold">12:00 — 20:00</span> середа
+              </li>
+
+              <li>
+                <span class="footer__bold">12:00 — 20:00</span> четвер
+              </li>
+
+              <li>
+                <span class="footer__bold">12:00 — 20:00</span> п'ятниця
+              </li>
+
+              <li>
+                <span class="footer__bold">11:00 — 19:00</span> субота
+              </li>
+
+              <li>
+                <span class="footer__bold">11:00 — 19:00</span> неділя
+              </li>
+            </ul>
+
+            <div>
+              <p>
+                <span class="footer__bold">Вихідні:</span> понеділок, вівторок
+              </p>
+
+              <p>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+
+          <div class="footer__info">
+            <p>Контакти:</p>
+
+            <ul class="footer__list">
+              <li>вул. М. Грушевського, 6; Київ, 01001</li>
+
+              <li>тел. +38 (044) 278-13-57</li>
+
+              <li> факс +38 (044) 278-74-54</li>
+
+              <li> e-mail: info@namu.kiev.ua</li>
+            </ul>
+          </div>
+
+          <div class="footer__to-up-wrapper">
+            <a href="#" class="footer__to-up"></a>
+          </div>
+
+          <div class="footer__line"></div>
+
+          <nav class="footer__nav">
+            <ul class="footer__nav-list">
+              <li>
+                <a href="#gallery" class="footer__nav-link">Галерея</a>
+              </li>
+
+              <li>
+                <a href="#events" class="footer__nav-link">Виставки та події</a>
+              </li>
+            </ul>
+          </nav>
+
+          <nav class="footer__nav">
+            <ul class="footer__nav-list">
+              <li>
+                <a href="#about" class="footer__nav-link">Про Нас</a>
+              </li>
+
+              <li>
+                <a href="#contacts" class="footer__nav-link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__bottom">
+          <span>Designed by Zhyriada Marina</span>
+
+          <span>Copyright © 2019. All Rights Reserved.</span>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
