--- a/src/index.html
+++ b/src/index.html
@@ -49,14 +49,17 @@
         <div class="header__top-nav__name header__top-nav__name--m grid grid--desktop grid--tablet">
           <h1 class="header__top-nav__name__item">МУЗЕЙ</h1>
         </div>
-        <div class="header__top-nav__tickets">
-          <div class="header__top-nav__tickets__item">
-            КВИТКИ
+        <a
+          href="#gallery"
+          title="gallery"
+          class="header__top-nav__tickets">
+          <div class="header__top-nav__tickets__container">
+            <div class="header__top-nav__tickets__container__item">
+              КВИТКИ
+            </div>
+            <p class="header__top-nav__tickets__container__right"></p>
           </div>
-          <a href="#gallery" title="gallery">
-            <p class="header__top-nav__tickets__right"></p>
-          </a>
-        </div>
+        </a>
 
         <a
           href="#events"
@@ -210,10 +213,62 @@
         <h1 class="gallery__name">
           Галерея
         </h1>
-        <div class="gallery__image">
-          <img src="./images/photos/gallery/1.svg"
-            alt="gallery1"
-            class="gallery__image__item">
+        <div class="gallery__slideshow-container grid grid--desktop">
+
+          <div class="
+            gallery__slideshow-container__mySlides
+            gallery__fade
+            grid__item--desktop-1-4">
+            <img
+              src="./images/photos/gallery/1.svg"
+              alt="1"
+              class="gallery__slideshow-container__photo">
+          </div>
+
+          <div class="
+            gallery__slideshow-container__mySlides
+            gallery__fade
+            grid__item--desktop-5-12">
+            <img
+              src="./images/photos/gallery/2.svg"
+              alt="2"
+              class="gallery__slideshow-container__photo">
+          </div>
+
+          <div class="
+            gallery__slideshow-container__mySlides
+            gallery__fade
+            grid__item--desktop-1-8">
+            <img
+              src="./images/photos/gallery/3.svg"
+              alt="3"
+              class="gallery__slideshow-container__photo">
+          </div>
+
+          <div class="
+           gallery__slideshow-container__mySlides
+           gallery__fade
+           grid__item--desktop-9-12">
+            <img
+              src="./images/photos/gallery/4.svg"
+              alt="4"
+              class="gallery__slideshow-container__photo">
+          </div>
+
+          <div class="gallery__slideshow-container__mySlides gallery__fade">
+            <img
+              src="./images/photos/gallery/5.svg"
+              alt="5"
+              class="gallery__slideshow-container__photo">
+          </div>
+        </div>
+
+        <div class="gallery__items">
+          <span class="gallery__dot" onclick="currentSlide(1)"></span>
+          <span class="gallery__dot" onclick="currentSlide(2)"></span>
+          <span class="gallery__dot" onclick="currentSlide(3)"></span>
+          <span class="gallery__dot" onclick="currentSlide(4)"></span>
+          <span class="gallery__dot" onclick="currentSlide(5)"></span>
         </div>
       </div>
       </div>
@@ -226,9 +281,10 @@
           <p class="subscription__paragraph">
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
-          <form action="post" class="subscription__form">
+          <form action="post" class="subscription__form form">
             <input
               required
+              autocomplete="off"
               name="email"
               type="Email"
               placeholder="Email"
@@ -238,7 +294,7 @@
               href="#"
               title="subscription"
               class="subscription__link">
-              <p class="subscription__form__email"></p>
+              <button type="submit" class="subscription__form__email"></button>
             </a>
           </form>
         </div>
@@ -268,10 +324,12 @@
                 alt="logo">
             </a>
             <a
+              class="footer__socials__instagram"
               href="https://www.instagram.com/"
               title="logo"
               target="_blank">
               <img
+                class="footer__socials__instagram__item"
                 src="./images/signs/Instagram.svg"
                 alt="logo">
             </a>
@@ -299,7 +357,14 @@
           <div class="footer__second__contact">
             <div class="footer__second__name">Контакти:</div>
             <div class="footer__second__adress">
-              <div class="footer__second__adress__item">вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+              <div class="footer__second__adress__item">
+                <a
+                  target="_blank"
+                  href="https://goo.gl/maps/wkEatG47NuhNWbnn7"
+                  class="footer__second__adress__item__link"
+                >
+                вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+                </a>
               </div>
             </div>
           </div>
