--- a/src/index.html
+++ b/src/index.html
@@ -213,11 +213,12 @@
         <h1 class="gallery__name">
           Галерея
         </h1>
-        <div class="gallery__slideshow-container grid grid--desktop">
+        <div class="gallery__slideshow-container grid grid--tablet grid--desktop ">
 
           <div class="
             gallery__slideshow-container__mySlides
             gallery__fade
+            grid__item--tablet-1-3
             grid__item--desktop-1-4">
             <img
               src="./images/photos/gallery/1.svg"
@@ -228,7 +229,9 @@
           <div class="
             gallery__slideshow-container__mySlides
             gallery__fade
-            grid__item--desktop-5-12">
+            grid__item--desktop-5-12
+            tablet
+            phone">
             <img
               src="./images/photos/gallery/2.svg"
               alt="2"
@@ -238,7 +241,9 @@
           <div class="
             gallery__slideshow-container__mySlides
             gallery__fade
-            grid__item--desktop-1-8">
+            grid__item--desktop-1-8
+            phone
+            tablet">
             <img
               src="./images/photos/gallery/3.svg"
               alt="3"
@@ -248,29 +253,35 @@
           <div class="
            gallery__slideshow-container__mySlides
            gallery__fade
-           grid__item--desktop-9-12">
+           grid__item--desktop-9-12
+           phone
+           tablet">
             <img
               src="./images/photos/gallery/4.svg"
               alt="4"
               class="gallery__slideshow-container__photo">
           </div>
 
-          <div class="gallery__slideshow-container__mySlides gallery__fade">
+          <div class="
+           gallery__slideshow-container__mySlides
+           gallery__fade
+           grid__item--tablet-4-6
+           phone
+           desktop">
             <img
               src="./images/photos/gallery/5.svg"
-              alt="5"
+              alt="4"
               class="gallery__slideshow-container__photo">
           </div>
-        </div>
 
-        <div class="gallery__items">
-          <span class="gallery__dot" onclick="currentSlide(1)"></span>
-          <span class="gallery__dot" onclick="currentSlide(2)"></span>
-          <span class="gallery__dot" onclick="currentSlide(3)"></span>
-          <span class="gallery__dot" onclick="currentSlide(4)"></span>
-          <span class="gallery__dot" onclick="currentSlide(5)"></span>
+          <div class="gallery__items grid__item--tablet-3-4">
+            <span class="gallery__dot desktop " onclick="currentSlide(1)"></span>
+            <span class="gallery__dot desktop" onclick="currentSlide(2)"></span>
+            <span class="gallery__dot desktop" onclick="currentSlide(3)"></span>
+            <span class="gallery__dot desktop" onclick="currentSlide(4)"></span>
+            <span class="gallery__dot tablet desktop" onclick="currentSlide(5)"></span>
+          </div>
         </div>
-      </div>
       </div>
 
       <div class="subscription" id="about-us">
