--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,340 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./images/icons/favicon.png">
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+  <body class="page__body">
+    <header class="header">
+      <div class="wrapper">
+        <div class="header__nav">
+          <a href="#menu" class="icon icon--menu">
+          </a>
+          <a href="#" class="logo header__logo">
+            NA
+            <br>
+            MU
+          </a>
+        </div>
+
+        <div class="header__content">
+          <h1 class="header__title">
+            ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </h1>
+          <a href="#" class="button header__button">
+            <span class="button__text">КВИТКИ</span>
+            <span class="button__arrow"></span>
+          </a>
+
+        </div>
+        <div class="header__mark">ПОДІЇ</div>
+      </div>
+
+      <div class="page__menu menu" id="menu">
+        <div class="wrapper">
+          <div class="menu__content">
+            <div class="menu__top">
+              <a href="#" class="icon icon--cross"></a>
+              <nav class="menu__nav">
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a href="#gallery" class="menu__link">Галерея</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#" class="menu__link">Про Нас</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#events" class="menu__link">Виставки та події</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#subscription" class="menu__link">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="menu__schedule schedule">
+              <h6 class="schedule__title">Графік роботи</h6>
+              <div class="schedule__content">
+                <ul class="schedule__list">
+                  <li class="schedule__item">
+                    <span class="schedule__time">12:00 — 20:00</span>
+                    <span class="schedule__weekday">середа</span>
+                  </li>
+
+                  <li class="schedule__item">
+                    <span class="schedule__time">12:00 — 20:00</span>
+                    <span class="schedule__weekday">четвер</span>
+                  </li>
+
+                  <li class="schedule__item">
+                    <span class="schedule__time">12:00 — 20:00</span>
+                    <span class="schedule__weekday">п’ятниця</span>
+                  </li>
+
+                  <li class="schedule__item">
+                    <span class="schedule__time">11:00 — 19:00</span>
+                    <span class="schedule__weekday">субота</span>
+                  </li>
+
+                  <li class="schedule__item">
+                    <span class="schedule__time">11:00 — 19:00</span>
+                    <span class="schedule__weekday">неділя</span>
+                  </li>
+                </ul>
+                <div class="schedule__info">
+                  <span class="schedule__info-important"> Вихідні:</span>
+                  понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="page__section events" id="events">
+        <div class="wrapper">
+          <h2 class="page__section-title">Актуальні події</h2>
+          <div class="events__exhibition exhibition">
+            <div class="exhibition__img-container">
+              <img class="exhibition__img" src="./images/events1.png" alt="Виставка Йду і повертаюсь">
+            </div>
+
+            <div class="exhibition__content">
+              <div class="exhibition__description">
+                <h5 class="exhibition__name">Виставка</h5>
+                <h4 class="exhibition__date">26.08-29.11.2019</h4>
+              </div>
+              <h3 class="exhibition__title">Йду і повертаюсь</h3>
+              <p class="exhibition__text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="events__exhibition exhibition">
+            <div class="exhibition__img-container">
+              <img class="exhibition__img" src="./images/events2.png" alt="Виставка І спогади і мрії">
+            </div>
+
+            <div class="exhibition__content">
+              <div class="exhibition__description">
+                <h5 class="exhibition__name">Виставка</h5>
+                <h4 class="exhibition__date">26.08-29.11.2019</h4>
+              </div>
+              <h3 class="exhibition__title">І спогади і мрії</h3>
+              <p class="exhibition__text">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="wrapper wrapper--only-tablet">
+          <div class="events__lecture lecture">
+            <div class="lecture__img-container">
+              <img class="lecture__img" src="./images/events3.png" alt="Виставка Йду і повертаюсь">
+            </div>
+
+            <div class="lecture__content">
+              <div class="lecture__description">
+                <h5 class="lecture__name">Лекція</h5>
+                <h4 class="lecture__date">26/08/2019 - 11:00</h4>
+              </div>
+              <h3 class="lecture__title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section gallery" id="gallery">
+        <div class="wrapper wrapper--only-desktop">
+          <h2 class="page__section-title gallery__title">Галерея</h2>
+          <div class="gallery__slider">
+            <div class="gallery__img-container gallery__img-container--1">
+              <img class="gallery__img" src="./images/gallery1.jpeg" alt="gallery image 1">
+            </div>
+
+            <div class="gallery__img-container gallery__img-container--2">
+              <img class="gallery__img" src="./images/gallery2.png" alt="gallery image 2">
+            </div>
+
+            <div class="gallery__img-container gallery__img-container--3">
+              <img class="gallery__img" src="./images/gallery3.png" alt="gallery image 3">
+            </div>
+
+            <div class="gallery__img-container gallery__img-container--4">
+              <img class="gallery__img" src="./images/gallery4.jpeg" alt="gallery image 4">
+            </div>
+          </div>
+
+          <div class="gallery__pagination pagination">
+            <span class="pagination__button pagination__button--active"></span>
+            <span class="pagination__button"></span>
+            <span class="pagination__button"></span>
+            <span class="pagination__button"></span>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section subscription" id="subscription">
+        <div class="wrapper">
+          <h2 class="page__section-title subscription__title">Підписка</h2>
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form action="/" class="subscription__form">
+            <input class="subscription__field" type="email" name="email" placeholder="E-mail" required>
+            <input type="submit" class="subscription__button" title="Send">
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="wrapper">
+        <div class="footer__components">
+          <div class="footer__info">
+            <div class="footer__top">
+              <a href="#" class="logo logo--lg footer__logo">
+                NA
+                <br>
+                MU
+              </a>
+              <ul class="footer__media">
+                <li class="footer__media-item">
+                  <a
+                    href="#facebook"
+                    class="footer__media-link"
+                  >
+                    <span class="icon icon--facebook"></span>
+                  </a>
+                </li>
+                <li class="footer__media-item">
+                  <a
+                    href="#instagram"
+                    class="footer__media-link"
+                  >
+                    <span class="icon icon--instagram"></span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__description">
+              <div class="footer__content">
+                <div class="footer__schedule schedule">
+                  <h6 class="schedule__title">Графік роботи</h6>
+                  <ul class="schedule__list schedule__list--footer">
+                    <li class="schedule__item">
+                      <span class="schedule__time">12:00 — 20:00</span>
+                      <span class="schedule__weekday">середа</span>
+                    </li>
+
+                    <li class="schedule__item">
+                      <span class="schedule__time">12:00 — 20:00</span>
+                      <span class="schedule__weekday">четвер</span>
+                    </li>
+
+                    <li class="schedule__item">
+                      <span class="schedule__time">12:00 — 20:00</span>
+                      <span class="schedule__weekday">п’ятниця</span>
+                    </li>
+
+                    <li class="schedule__item">
+                      <span class="schedule__time">11:00 — 19:00</span>
+                      <span class="schedule__weekday">субота</span>
+                    </li>
+                    
+                    <li class="schedule__item">
+                      <span class="schedule__time">11:00 — 19:00</span>
+                      <span class="schedule__weekday">неділя</span>
+                    </li>
+                  </ul>
+                  <div class="schedule__info schedule__info--footer">
+                    <span class="schedule__info-important"> Вихідні:</span>
+                    понеділок, вівторок
+                    <br>
+                    Каса припиняє роботу за 1 годину
+                    <br>
+                    до закриття музею
+                  </div>
+                </div>
+                <div class="footer__contacts contacts">
+                  <h6 class="contacts__title">Контакти:</h6>
+                  <ul class="contacts__list">
+                    <li class="contacts__item">
+                      <a class="contacts__link" href="https://goo.gl/maps/YgRGHAvfiqda7615A?coh=178573&entry=tt" target="_blank" rel="noopener noreferrer">
+                        вул. М. Грушевського, 6; Київ, 01001
+                      </a>
+                    </li>
+                    <li class="contacts__item">
+                      <a class="contacts__link" href="tel:+380442781357">
+                        тел. +38 (044) 278-13-57
+                      </a>
+                    </li>
+
+                    <li class="contacts__item">
+                      <a class="contacts__link" href="tel:+380442787454">
+                        факс +38 (044) 278-74-54
+                      </a>
+                    </li>
+
+                    <li class="contacts__item">
+                      <a class="contacts__link" href="mailto:info@namu.kiev.ua">
+                        e-mail: info@namu.kiev.ua
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <button class="footer__button">
+                <span class="icon icon--scroll-up"></span>
+              </button>
+            </div>
+          </div>
+          <nav class="footer__nav menu">
+            <ul class="menu__list menu__list--footer">
+              <li class="menu__item">
+                <a href="#gallery" class="footer__link menu__link">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#" class="footer__link menu__link">
+                  Про Нас
+                </a>
+              </li>
+              <li class="menu__item">
+                <a href="#events" class="footer__link menu__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="menu__item">
+                <a href="#subscription" class="footer__link menu__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__copyright copyright">
+          <p class="copyright__item">Designed by Zhyriada Marina</p>
+          <p class="copyright__item">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
