added hover effects

--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,18 @@
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="./images/icons/favicon.png">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/favicon.png"
+    >
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <script src="scripts/main.js" defer></script>
   </head>
 
   <body class="page__body">
-    <header class="header">
+    <header class="header" id="header">
       <div class="wrapper">
         <div class="header__nav">
           <a href="#menu" class="icon icon--menu">
@@ -32,7 +36,7 @@
             <br>
             МУЗЕЙ
           </h1>
-          <a href="#" class="button header__button">
+          <a href="#events" class="button header__button">
             <span class="button__text">КВИТКИ</span>
             <span class="button__arrow"></span>
           </a>
@@ -52,7 +56,7 @@
                     <a href="#gallery" class="menu__link">Галерея</a>
                   </li>
                   <li class="menu__item">
-                    <a href="#" class="menu__link">Про Нас</a>
+                    <a href="#subscription" class="menu__link">Про Нас</a>
                   </li>
                   <li class="menu__item">
                     <a href="#events" class="menu__link">Виставки та події</a>
@@ -111,7 +115,11 @@
           <h2 class="page__section-title">Актуальні події</h2>
           <div class="events__exhibition exhibition">
             <div class="exhibition__img-container">
-              <img class="exhibition__img" src="./images/events1.png" alt="Виставка Йду і повертаюсь">
+              <img
+                class="exhibition__img"
+                src="./images/events1.png"
+                alt="Виставка Йду і повертаюсь"
+              >
             </div>
 
             <div class="exhibition__content">
@@ -128,7 +136,11 @@
 
           <div class="events__exhibition exhibition">
             <div class="exhibition__img-container">
-              <img class="exhibition__img" src="./images/events2.png" alt="Виставка І спогади і мрії">
+              <img
+                class="exhibition__img"
+                src="./images/events2.png"
+                alt="Виставка І спогади і мрії"
+              >
             </div>
 
             <div class="exhibition__content">
@@ -147,7 +159,11 @@
         <div class="wrapper wrapper--only-tablet">
           <div class="events__lecture lecture">
             <div class="lecture__img-container">
-              <img class="lecture__img" src="./images/events3.png" alt="Виставка Йду і повертаюсь">
+              <img
+                class="lecture__img"
+                src="./images/events3.png"
+                alt="Виставка Йду і повертаюсь"
+              >
             </div>
 
             <div class="lecture__content">
@@ -165,20 +181,36 @@
         <div class="wrapper wrapper--only-desktop">
           <h2 class="page__section-title gallery__title">Галерея</h2>
           <div class="gallery__slider">
-            <div class="gallery__img-container gallery__img-container--1">
-              <img class="gallery__img" src="./images/gallery1.jpeg" alt="gallery image 1">
+            <div class="gallery__img-container">
+              <img
+                class="gallery__img"
+                src="./images/gallery1.jpeg"
+                alt="gallery image 1"
+              >
             </div>
 
-            <div class="gallery__img-container gallery__img-container--2">
-              <img class="gallery__img" src="./images/gallery2.png" alt="gallery image 2">
+            <div class="gallery__img-container">
+              <img
+                class="gallery__img"
+                src="./images/gallery2.png"
+                alt="gallery image 2"
+              >
             </div>
 
-            <div class="gallery__img-container gallery__img-container--3">
-              <img class="gallery__img" src="./images/gallery3.png" alt="gallery image 3">
+            <div class="gallery__img-container">
+              <img
+                class="gallery__img"
+                src="./images/gallery3.png"
+                alt="gallery image 3"
+              >
             </div>
 
-            <div class="gallery__img-container gallery__img-container--4">
-              <img class="gallery__img" src="./images/gallery4.jpeg" alt="gallery image 4">
+            <div class="gallery__img-container">
+              <img
+                class="gallery__img"
+                src="./images/gallery4.jpeg"
+                alt="gallery image 4"
+              >
             </div>
           </div>
 
@@ -196,8 +228,20 @@
           <h2 class="page__section-title subscription__title">Підписка</h2>
           <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
           <form action="/" class="subscription__form">
-            <input class="subscription__field" type="email" name="email" placeholder="E-mail" required>
-            <input type="submit" class="subscription__button" title="Send">
+            <input
+              class="subscription__field"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              required
+            >
+
+            <button
+              type="submit"
+              class="subscription__button"
+              title="Send"
+            >
+            </button>
           </form>
         </div>
       </section>
@@ -215,16 +259,20 @@
               <ul class="footer__media">
                 <li class="footer__media-item">
                   <a
-                    href="#facebook"
+                    href="https://www.facebook.com/namu.museum/?locale=uk_UA"
                     class="footer__media-link"
+                    target="_blank"
+                    rel="noopener noreferrer"
                   >
                     <span class="icon icon--facebook"></span>
                   </a>
                 </li>
                 <li class="footer__media-item">
                   <a
-                    href="#instagram"
+                    href="https://www.instagram.com/namu.museum/"
                     class="footer__media-link"
+                    target="_blank"
+                    rel="noopener noreferrer"
                   >
                     <span class="icon icon--instagram"></span>
                   </a>
@@ -255,7 +303,7 @@
                       <span class="schedule__time">11:00 — 19:00</span>
                       <span class="schedule__weekday">субота</span>
                     </li>
-                    
+
                     <li class="schedule__item">
                       <span class="schedule__time">11:00 — 19:00</span>
                       <span class="schedule__weekday">неділя</span>
@@ -274,7 +322,12 @@
                   <h6 class="contacts__title">Контакти:</h6>
                   <ul class="contacts__list">
                     <li class="contacts__item">
-                      <a class="contacts__link" href="https://goo.gl/maps/YgRGHAvfiqda7615A?coh=178573&entry=tt" target="_blank" rel="noopener noreferrer">
+                      <a
+                        class="contacts__link"
+                        href="https://goo.gl/maps/YgRGHAvfiqda7615A?coh=178573&entry=tt"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                      >
                         вул. М. Грушевського, 6; Київ, 01001
                       </a>
                     </li>
@@ -298,9 +351,9 @@
                   </ul>
                 </div>
               </div>
-              <button class="footer__button">
+              <a href="#header" class="footer__button">
                 <span class="icon icon--scroll-up"></span>
-              </button>
+              </a>
             </div>
           </div>
           <nav class="footer__nav menu">
