add menu and slider

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header id="#about" class="header">
+    <header id="about" class="header page__header">
       <div class="container">
         <div class="header__top">
           <div class="header__menu-opener"></div>
@@ -40,8 +40,74 @@
       <div class="header__image"></div>
     </header>
 
+    <div class="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__cross"></div>
+
+          <nav class="menu__nav">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Галерея</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#about" class="menu__link">Про Нас</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#events" class="menu__link">Виставки та події</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="menu__line"></div>
+
+          <div class="menu__info">
+            <p class="menu__info-title">Графік роботи</p>
+
+            <ul class="menu__info-list">
+              <li>
+                <span class="menu__bold">12:00 — 20:00</span> середа
+              </li>
+
+              <li>
+                <span class="menu__bold">12:00 — 20:00</span> четвер
+              </li>
+
+              <li>
+                <span class="menu__bold">12:00 — 20:00</span> п'ятниця
+              </li>
+
+              <li>
+                <span class="menu__bold">11:00 — 19:00</span> субота
+              </li>
+
+              <li>
+                <span class="menu__bold">11:00 — 19:00</span> неділя
+              </li>
+            </ul>
+
+            <ul class="menu__info-list">
+              <li>
+                <span class="menu__bold">Вихідні:</span> понеділок, вівторок
+              </li>
+
+              <li>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <main>
-      <section id="events" class="events">
+      <section id="events" class="events page__events">
         <div class="container">
           <h2 class="events__title title">Актуальні події</h2>
 
@@ -99,7 +165,7 @@
         </div>
       </section>
 
-      <section class="event">
+      <section class="event page__event">
         <img
           src="./images/events/event-bg.jpg"
           alt="Від класицизму до романтизму"
@@ -129,18 +195,46 @@
         </div>
       </section>
 
-      <section id="gallery" class="gallery">
+      <section id="gallery" class="gallery page__gallery">
         <div class="container">
           <h2 class="gallery__title title">Галерея</h2>
 
           <div class="slider">
             <div class="slider__slides">
-              <img
-                src="./images/slides/image-1.jpg"
-                alt="Slide's image 1"
-                class="slider__image"
-              >
+              <div class="slider__slide">
+                <img
+                  src="./images/slides/image-1.jpg"
+                  alt="Slide's image 1"
+                  class="slider__image"
+                >
+              </div>
+
+              <div class="slider__slide">
+                <img
+                  src="./images/slides/image-2.jpg"
+                  alt="Slide's image 2"
+                  class="slider__image"
+                >
+              </div>
+
+              <div class="slider__slide">
+                <img
+                  src="./images/slides/image-1.jpg"
+                  alt="Slide's image 3"
+                  class="slider__image"
+                >
+              </div>
+
+              <div class="slider__slide">
+                <img
+                  src="./images/slides/image-2.jpg"
+                  alt="Slide's image 4"
+                  class="slider__image"
+                >
+              </div>
             </div>
+
+            <div class="slider__indicators"></div>
           </div>
 
           <div class="gallery__images">
