fix footer's link

--- a/src/index.html
+++ b/src/index.html
@@ -321,7 +321,7 @@
           </div>
 
           <div class="footer__info">
-            <p>Графік роботи</p>
+            <p>Графік роботи:</p>
 
             <ul class="footer__list">
               <li>
@@ -360,13 +360,47 @@
             <p>Контакти:</p>
 
             <ul class="footer__list">
-              <li>вул. М. Грушевського, 6; Київ, 01001</li>
+              <li>
+                Адреса:
+                <a
+                  href="https://goo.gl/maps/CAnSUpSVKL6RaYgr9?coh=178572&entry=tt"
+                  class="footer__link"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+              </li>
 
-              <li>тел. +38 (044) 278-13-57</li>
+              <li>
+                тел.
+                <a
+                  href="tel: +38 (044) 278-13-57"
+                  class="footer__link"
+                >
+                  +38 (044) 278-13-57
+                </a>
+              </li>
 
-              <li> факс +38 (044) 278-74-54</li>
+              <li>
+                факс
+                <a
+                  href="tel: +38 (044) 278-74-54"
+                  class="footer__link"
+                >
+                  +38 (044) 278-74-54
+                </a>
+              </li>
 
-              <li> e-mail: info@namu.kiev.ua</li>
+              <li>
+                e-mail:
+                <a
+                  href="mailto: info@namu.kiev.ua"
+                  class="footer__link"
+                  target="_blank"
+                >
+                  info@namu.kiev.ua
+                </a>
+              </li>
             </ul>
           </div>
 
