add requested changes

--- a/src/index.html
+++ b/src/index.html
@@ -47,20 +47,20 @@
 
           <nav class="menu__nav">
             <ul class="menu__list">
-              <li class="menu__item">
-                <a href="#gallery" class="menu__link">Галерея</a>
+              <li>
+                <a href="#gallery" class="nav-link">Галерея</a>
               </li>
 
-              <li class="menu__item">
-                <a href="#about" class="menu__link">Про Нас</a>
+              <li>
+                <a href="#about" class="nav-link">Про&nbsp;Нас</a>
               </li>
 
-              <li class="menu__item">
-                <a href="#events" class="menu__link">Виставки та події</a>
+              <li>
+                <a href="#events" class="nav-link">Виставки&nbsp;та&nbsp;події</a>
               </li>
 
-              <li class="menu__item">
-                <a href="#contacts" class="menu__link">Контакти</a>
+              <li>
+                <a href="#contacts" class="nav-link">Контакти</a>
               </li>
             </ul>
           </nav>
@@ -113,11 +113,13 @@
 
           <div class="events__item">
             <div class="grid grid--tablet">
-              <img
-                src="./images/events/event-1.jpg"
-                alt="Йду і повертаюсь"
-                class="events__item-image"
-              >
+              <div class="events__image-wrapper">
+                <img
+                  src="./images/events/event-1.jpg"
+                  alt="Йду і повертаюсь"
+                  class="image"
+                >
+              </div>
 
               <div class="events__item-info">
                 <div class="events__item-date-wrapper">
@@ -139,11 +141,13 @@
 
           <div class="events__item">
             <div class="grid grid--tablet">
-              <img
-                src="./images/events/event-2.jpg"
-                alt="І спогади і мрії"
-                class="events__item-image"
-              >
+              <div class="events__image-wrapper">
+                <img
+                  src="./images/events/event-2.jpg"
+                  alt="І спогади і мрії"
+                  class="image"
+                >
+              </div>
 
               <div class="events__item-info">
                 <div class="events__item-date-wrapper">
@@ -166,19 +170,24 @@
       </section>
 
       <section class="event page__event">
-        <img
-          src="./images/events/event-bg.jpg"
-          alt="Від класицизму до романтизму"
-          class="event__outer-image"
-        >
+        <div class="event__outer-image-wrapper">
+          <img
+            src="./images/events/event-bg.jpg"
+            alt="Від класицизму до романтизму"
+            class="image"
+          >
+        </div>
+
 
         <div class="container">
           <div class="event__content">
-            <img
-              src="./images/events/event-bg.jpg"
-              alt="Від класицизму до романтизму"
-              class="event__inner-image"
-            >
+            <div class="event__inner-image-wrapper">
+              <img
+                src="./images/events/event-bg.jpg"
+                alt="Від класицизму до романтизму"
+                class="image"
+              >
+            </div>
 
             <div class="event__info">
               <div class="event__date-wrapper">
@@ -239,29 +248,37 @@
 
           <div class="gallery__images">
             <div class="grid grid--desktop grid--gallery">
-              <img
-                src="./images/gallery/image-1.jpg"
-                alt="Gallery's image 1"
-                class="gallery__image"
-              >
+              <div class="gallery__image-wrapper">
+                <img
+                  src="./images/gallery/image-1.jpg"
+                  alt="Gallery's image 1"
+                  class="image"
+                >
+              </div>
 
-              <img
-                src="./images/gallery/image-2.jpg"
-                alt="Gallery's image 2"
-                class="gallery__image"
-              >
+              <div class="gallery__image-wrapper">
+                <img
+                  src="./images/gallery/image-2.jpg"
+                  alt="Gallery's image 2"
+                  class="image"
+                >
+              </div>
 
-              <img
-                src="./images/gallery/image-3.jpg"
-                alt="Gallery's image 3"
-                class="gallery__image"
-              >
+              <div class="gallery__image-wrapper">
+                <img
+                  src="./images/gallery/image-3.jpg"
+                  alt="Gallery's image 3"
+                  class="image"
+                >
+              </div>
 
-              <img
-                src="./images/gallery/image-4.jpg"
-                alt="Gallery's image 4"
-                class="gallery__image"
-              >
+              <div class="gallery__image-wrapper">
+                <img
+                  src="./images/gallery/image-4.jpg"
+                  alt="Gallery's image 4"
+                  class="image"
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -413,11 +430,11 @@
           <nav class="footer__nav">
             <ul class="footer__nav-list">
               <li>
-                <a href="#gallery" class="footer__nav-link">Галерея</a>
+                <a href="#gallery" class="nav-link nav-link--footer">Галерея</a>
               </li>
 
               <li>
-                <a href="#events" class="footer__nav-link">Виставки та події</a>
+                <a href="#events" class="nav-link nav-link--footer">Виставки&nbsp;та&nbsp;події</a>
               </li>
             </ul>
           </nav>
@@ -425,11 +442,11 @@
           <nav class="footer__nav">
             <ul class="footer__nav-list">
               <li>
-                <a href="#about" class="footer__nav-link">Про Нас</a>
+                <a href="#about" class="nav-link nav-link--footer">Про&nbsp;Нас</a>
               </li>
 
               <li>
-                <a href="#contacts" class="footer__nav-link">Контакти</a>
+                <a href="#contacts" class="nav-link nav-link--footer">Контакти</a>
               </li>
             </ul>
           </nav>
@@ -438,7 +455,7 @@
         <div class="footer__bottom">
           <span>Designed by Zhyriada Marina</span>
 
-          <span>Copyright © 2019. All Rights Reserved.</span>
+          <span>Copyright © 2023. All Rights Reserved.</span>
         </div>
       </div>
     </footer>
