--- a/src/index.html
+++ b/src/index.html
@@ -207,9 +207,9 @@
         <div class="contacts__address">
           <p>Контакти:</p>
           <p>вул. М. Грушевського, 6; Київ, 01001<br>
-            тел. +38 (044) 278-13-57<br>
-            факс +38 (044) 278-74-54<br>
-            e-mail: info@namu.kiev.ua
+            <a href="tel:+38 (044) 278-13-57" class="contacts__address-links">тел. +38 (044) 278-13-57</a> <br>
+            <a href="tel:+38 (044) 278-74-54"  class="contacts__address-links">факс +38 (044) 278-74-54</a> <br>
+            <a href="mailto:info@namu.kiev.ua"  class="contacts__address-links">e-mail: info@namu.kiev.ua</a>
           </p>
         </div>
 
