fixed link, hover for contacts and header background

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
                     <a href="#gallery" class="menu__link">Галерея</a>
                   </li>
                   <li class="menu__item">
-                    <a href="#subscription" class="menu__link">Про Нас</a>
+                    <a href="#contacts" class="menu__link">Про Нас</a>
                   </li>
                   <li class="menu__item">
                     <a href="#events" class="menu__link">Виставки та події</a>
@@ -318,7 +318,7 @@
                     до закриття музею
                   </div>
                 </div>
-                <div class="footer__contacts contacts">
+                <div class="footer__contacts contacts" id="contacts">
                   <h6 class="contacts__title">Контакти:</h6>
                   <ul class="contacts__list">
                     <li class="contacts__item">
@@ -375,7 +375,7 @@
                 </a>
               </li>
               <li class="menu__item">
-                <a href="#subscription" class="footer__link menu__link">
+                <a href="#contacts" class="footer__link menu__link">
                   Контакти
                 </a>
               </li>
