MUSEUM-LANDING-PAGE

--- a/src/index.html
+++ b/src/index.html
@@ -333,7 +333,9 @@
                     autocomplete="off"
                   >
 
-                  <button class="form__button form__button--subscription"></button>
+                  <button 
+                    class="form__button form__button--subscription"
+                 ></button>
                 </form>
               </div>
             </div>
