MUSEUM-LANDING-FIXED

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
                     value="КВИТКИ"
                     required
                     autocomplete="off"
+                    readonly
                   >
 
                   <button class="form__button form__button--header"></button>
@@ -405,19 +406,25 @@
                 </h3>
 
                 <p class="contact-us__info">
-                  вул. М. Грушевського, 6; Київ, 01001
+                  <a
+                    href="https://goo.gl/maps/C9AuMuys1F4VPocc6"
+                    class="contact-us__info-link"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
                 </p>
 
                 <p class="contact-us__info">
-                  тел. +38 (044) 278-13-57
+                  тел. <a href="tel:+380442781357" class="contact-us__info-link">+38 (044) 278-13-57</a>
                 </p>
 
                 <p class="contact-us__info">
-                  факс +38 (044) 278-74-54
+                  факс <a href="tel:+380442787454" class="contact-us__info-link">+38 (044) 278-74-54</a>
                 </p>
 
                 <p class="contact-us__info">
-                  e-mail: info@namu.kiev.ua
+                  e-mail: <a href="mailto:info@namu.kiev.ua" class="contact-us__info-link">info@namu.kiev.ua</a>
                 </p>
               </section>
 
