--- a/src/index.html
+++ b/src/index.html
@@ -336,7 +336,8 @@
                 </div>
               </div>
             </div>
-            <div class="footer__second__days">Вихідні: понеділок, вівторок<br>
+            <div class="footer__second__days">
+              <strong>Вихідні:</strong> понеділок, вівторок<br>
               Каса припиняє роботу за 1 годину
               до закриття музею
             </div>
