--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,15 @@
       <div class="container">
         <div class="nav">
           <a href="#menu" class="nav__hidden">
-            <img
-              src="./images/menu.svg"
-              alt="menu"
-              class="nav__menu" >
+            <svg
+              class="nav__menu"
+              width="18"
+              height="12"
+              viewBox="0 0 18 12"
+              fill="#0F0E08"
+              xmlns="http://www.w3.org/2000/svg">
+              <path d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z" >
+            </svg>
           </a>
           <a href="#" class="nav__logo">
             NA <br> MU
@@ -44,10 +49,15 @@
           grid__item--3-5
           grid__item--tablet-1-3">
             <a href="#events" class="header__tickets">
-              <img
-                src="./images/tickets.svg"
-                alt="tickets"
-                class="header__btn" >
+              Квитки
+            </a>
+          </div>
+          <div class="
+          grid__item
+          grid__item--1-1"
+          >
+            <a href="#events" class="header__event">
+              Події
             </a>
           </div>
         </div>
@@ -62,10 +72,16 @@
 
               <div class="menu__list">
                 <a href="#" class="menu__cross">
-                  <img
-                    src="./images/cross.svg"
-                    alt="cross"
-                    class="menu__icon" >
+                  <svg
+                  width="14"
+                  class="menu__icon"
+                  height="14"
+                  viewBox="0 0 14 14"
+                  fill="white"
+                  xmlns="http://www.w3.org/2000/svg">
+                    <path d="M7.00023 5.58599L11.9502 0.635986L13.3642 2.04999L8.41423 6.99999L13.3642 11.95L11.9502 13.364L7.00023 8.41399L2.05023 13.364L0.63623 11.95L5.58623 6.99999L0.63623 2.04999L2.05023 0.635986L7.00023 5.58599Z" >
+                  </svg>
+
                 </a>
                 <div class="menu__nav">
                   <a href="#galery" class="menu__link">Галерея</a>
@@ -267,15 +283,34 @@
             <div class="footer__social">
               <a
                   href="https://www.facebook.com/"
-                  class="footer__fb footer__icon"
+                  class="footer__icon"
                   target="_blank"
-                  >
+                >
+                <svg
+                  class="footer__fb "
+                  width="12"
+                  height="24"
+                  viewBox="0 0 12 24"
+                  fill="#0F0E08"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.7198 4.64902C2.7198 5.25383 2.7198 7.95334 2.7198 7.95334H0.302734V11.9939H2.7198V24.0009H7.68498V11.9942H11.0168C11.0168 11.9942 11.3289 10.0568 11.4801 7.93844C11.0465 7.93844 7.70375 7.93844 7.70375 7.93844C7.70375 7.93844 7.70375 5.58779 7.70375 5.17577C7.70375 4.76285 8.24511 4.20743 8.78017 4.20743C9.31423 4.20743 10.4414 4.20743 11.4854 4.20743C11.4854 3.6573 11.4854 1.7565 11.4854 0.00100709C10.0917 0.00100709 8.50612 0.00100709 7.80721 0.00100709C2.59707 0.000728099 2.7198 4.04527 2.7198 4.64902Z" >
+                </svg>
+
               </a>
               <a
-                  href="https://www.instagram.com/"
-                  class="footer__inst footer__icon"
-                  target="_blank"
-                  >
+                href="https://www.instagram.com/"
+                class=" footer__icon"
+                target="_blank"
+                >
+                <svg
+                  class="footer__inst"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="#0F0E08"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z" >
+                </svg>
               </a>
             </div>
 
@@ -347,7 +382,7 @@
       </div>
       <div class="container">
         <div class="footer__block-two">
-          <div class="footer__copy">Copyright © 2019. All Rights Reserved.</div>
+          <div class="footer__copy">Copyright © 2023. All Rights Reserved.</div>
           <div class="footer__copy">Designed by Zhyriada Marina</div>
         </div>
       </div>
