add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
               grid__item--tablet-1-2
               grid__item--desktop-3-5
             ">
-              <div class="header__tickets-text">
-                КВИТКИ
+              <div>
+                <a href="#gallery" class="header__tickets-text">Квитки</a>
               </div>
 
               <div class="header__button--container">
