add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -369,12 +369,14 @@
                   <img
                     src="./images/facebook.svg"
                     alt="facebook"
+                    class="footer__facebook-icon"
                   >
                 </a>
                 <a href="#" class="footer__instagram">
                   <img
                     src="./images/instagram.svg"
                     alt="instagram"
+                    class="footer__instagram-icon"
                   >
                 </a>
               </div>
